--- a/Main.html
+++ b/Main.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
- <h3>Motivational subject from my idol who gave world a peaceful idology that shaped the world protest.</h3>
+ <h3>Motivational subject from great person.</h3>
 
 
 <div class="inspsub">
