Line 11 totally change

--- a/Main.html
+++ b/Main.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
- <h3>Motivational subject from great person.</h3>
+ <h3>He is one the best person in 20th century.</h3>
 
 
 <div class="inspsub">
