new chagne been made in file

--- a/Main.html
+++ b/Main.html
@@ -9,7 +9,7 @@
 <body>
 
  <h3>He is one the best person in 20th century.</h3>
-
+ <h1>He is also person for greatness</h1>
 
 <div class="inspsub">
 	<img src="mgi.jpg" class="mgi1">
