--- a/Main.html
+++ b/Main.html
@@ -8,9 +8,10 @@
 </head>
 <body>
 
- <h3>Motivational subject from great person.</h3>
+ <h3>He is one the best person in 20th century.</h3>
+ <h1>He is also person for greatness</h1>
 
-
+ <h1>He is also person for greatness</h1>
 <div class="inspsub">
 	<img src="mgi.jpg" class="mgi1">
 	<h2>Quotes from Gandhi</h2>
