--- a/Main.html
+++ b/Main.html
@@ -12,7 +12,7 @@
 
 
  <h1>He is also person for greatness</h1>
- <h1>He is also best</h1>
+  <p>He is best of best</p>
 <div class="inspsub">
 	<img src="mgi.jpg" class="mgi1">
 	<h2>Quotes from Gandhi</h2>
